ahora si arreglado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
   <body>
+    <!-- Área táctil invisible y fija para-->
+    
     <!-- Sidebar principal -->
     <nav id="sidebar">
       <div class="sidebar-header">
