--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
           <div class="user-info-wrapper">
             <div class="user-text">
-              <h4 class="user-name">Luis Quispe Osorio</h4>
+              <h4 class="user-name">Luis Osorio</h4>
               <p class="user-role">Administrador</p>
             </div>
             <button class="edit-user-btn" title="Editar perfil">
